--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ name: Docker
 on:
   push:
     branches: [ "main" ]
-    tags: [ '*.*.*' ]
+    tags: [ '*.*.*', 'v*.*.*' ]
   workflow_dispatch:
 
 env:
