--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,8 @@ name: Docker
 
 on:
   push:
-    tags: [ '*.*.*', 'v*.*.*' ]
+    tags:  
+      - '*.*.*'
 
 env:
   # Use docker.io for Docker Hub if empty
