--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -82,4 +82,5 @@ jobs:
         env:
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
           TAGS: ${{ steps.docker_meta.outputs.tags }}
-        run: cosign sign --yes "${TAGS}@${DIGEST}"
+          COSIGN_EXPERIMENTAL: "true"
+        run: echo "${{TAGS}}" | xargs -I {} cosign sign {}@${{DIGEST}}
