Update Workfile + Dockerfile

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -70,7 +70,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Sign images with a key
-        run: echo "${TAGS}" | xargs -I {} cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${}@${DIGEST}"
+        run: echo -e "${TAGS}" | xargs -I {} sh -c 'cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${}@${DIGEST}"'
         env:
           TAGS: ${{ steps.docker_meta.outputs.tags }}
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
